[fix]  fixed text overflows

--- a/core/static/dashboard/assets/css/app.css
+++ b/core/static/dashboard/assets/css/app.css
@@ -1,23 +1,3 @@
-/* width */
-::-webkit-scrollbar {
-    width: 1.2px;
-    height: 0;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
 
 
 /* Colors */
@@ -1440,14 +1420,24 @@ p{
 }
 
 .card-text{
-    height: 45px;
-    overflow: scroll;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height:46px;
 
 }
 
 .card-title{
-    height: 45px;
-    overflow: scroll;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height:46px;
 }
 
 .current {
